--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "khan-osama-hasan",
   "license": "MIT",
   "dependencies": {
+    "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "nodemon": "^3.0.2"
   }
 }
